--- a/site.yml
+++ b/site.yml
@@ -5,8 +5,23 @@
     - name: Install required packages
       apt: pkg=apache2 state=installed update_cache=yes
 
+    - name: Copy an Apache site configuration file
+      copy: src=apache/geojson-ld.conf dest=/etc/apache2/sites-available/geojson-ld.conf
+
     - name: Upload static site
       copy: src=_build/html dest=/var/www owner=www-data group=www-data mode=644
+
+    - name: Upload contexts
+      copy: src=contexts dest=/var/www/html owner=www-data group=www-data mode=644
+
+    - name: Enable mod_headers
+      command: a2enmod headers
+
+    - name: Disable default site
+      command: a2dissite 000-default
+
+    - name: Enable GeoJSON-LD site
+      command: a2ensite geojson-ld
 
     - name: Restart Apache
       service: name=apache2 state=restarted
